Development Portal (2017-08-03 shi)
==============================
Updated 'Inspire' template
Updated 'Mustard' template
Updated 'Grey' template
Fixed text in footer including translations
Fixed missing hover text in countries view
Moved activity id result button above search box


Development Portal (2017-08-01 shi)
==============================
Renamed 'Status' to 'Activity Status'
Updated art/ to ctrack/art/ in Generator to fix image paths


Development Portal (2017-07-31 shi)
==============================
Added back country and publisher list to Explore page
Added translations for Status dropdown
Added original and high icons for Status


Development Portal (2017-07-28 shi)
==============================
Added font css for Google translate in SAVi
Updated SAVi participating-org layout for version 2.02++ only
Updated Print-friendly css
Added support for location display in SAVi (ver. 2.02++)
Added IATI Identifier search
Updated css for identifier search button
Updated crumbname for new search
Updated all related translation text


Development Portal (2017-06-19 shi)
==============================
Fixed input font color for generator
Fixed margin bug for generator
Fixed grey rgba css
Fixed generator input bug for Firefox
Fixed generator dropdown arrow


Development Portal (2017-06-22 shi)
==============================
New generic names for variables
New orange_teal theme using variables test


Development Portal (2017-06-22 shi)
==============================
Streamline CSS variables for themes


Development Portal (2017-06-16 shi)
==============================
Fix counter increment for 2 or more digits


Development Portal (2017-06-13 shi)
==============================
Added SAVi chart and percentages for sector vocab 1
Added FAQ link in toggle_settings section
Fixed start/end dates border for SAVi
CSS fixes for Print Friendly
Display planned-disbursement element in SAVi
Fix new element display for Print Friendly
Update new element in /js for sorting