@@ -50,4 +50,4 @@ a#search_link span	{display:block; font-style:italic; font-size:0.6em; padding-t
 
 
 /*	WIP explore page	*/
-.typeahead.explore {width:934px; margin-bottom:40px; background-color:transparent !important; border:1px solid #fff !important; border-radius:0 !important; }
+.typeahead.explore {width:934px; background-color:transparent !important; border:1px solid #fff !important; border-radius:0 !important; }
