@@ -252,7 +252,7 @@
 
 <!-- new search in progress - Explore	-->
 #filter_head3_text
-<div><div class="search_head" style="display:inline-block; vertical-align:top; width:50%;">EXPLORE <span>filters</span></div><a id="view_search_clear" class="search_clear">Clear all filters<span>x</span></a></div>
+<div><div class="search_head" style="display:inline-block; vertical-align:top; width:70%;">EXPLORE <span>filters</span></div><a id="view_search_clear" class="search_clear abc"><span class="abc_toggle"><span></span></span>ABC</a><a id="view_search_clear" class="search_clear" style="width:20%;">Clear all filters<span>x</span></a></div>
 
 #filter_head_text
 <div class="search_head">DISCOVER <span>filters</span></div>
@@ -271,7 +271,7 @@
 <!-- new search in progress - Explore	-->
 #explore_portals_search3
 <span id="explore"></span>
-<div class="country_menu_wrap" style="padding-top:0;">
+<div class="country_menu_wrap">
 	<div class="country_menu_list_wrap">
 		<div class="menu_list_wrap left">
 			<ul id="country_menu_list" class="country_menu_list">{countries_country_select}</ul>
