@@ -1,3 +1,13 @@
+Development Portal (2017-08-18 shi)
+==============================
+Fix search2 dropdown margin
+
+
+Development Portal (2017-08-16 shi)
+==============================
+Updated locations element in SAVi
+
+
 Development Portal (2017-08-03 shi)
 ==============================
 Updated 'Inspire' template
